Update upcoming talks, add baby break, fix dark mode marker

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -43,3 +43,7 @@
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+::marker {
+  color: #ed5a95;
+}
